PLFM-7689: Refactor download actions to entity authorization manager